Update intro text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="introduction">
         <h1>Sven de Vrieze</h1>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae praesentium assumenda officia consequatur iste
-          nam, accusamus optio quos adipisci eveniet perferendis fuga corporis doloremque non ex voluptates tempora ab
-          eum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam commodi nostrum qui a nobis iusto.
-          Eum rerum commodi, nostrum numquam magni aut voluptate nihil quidem, sed, eos impedit voluptates at?
+          Noch bevor ich mein erstes Handy bekam, habe ich jede Chance genutzt, meinem Vater seine Kamera zu "klauen",
+          um selbst ein wenig damit zu knipsen. Seitdem habe ich meine Ausrüstung und mein Können stetig verbessert und
+          habe noch immer großen Spaß daran, Momente in Bildern festzuhalten. Hier finden sich meine besten Bilder der
+          letzten Zeit.
         </p>
       </div>
       <img src="assets/images/portrait.jpg" alt="Bild von Sven de Vrieze">
