Change styles to be responsive on most devices

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           letzten Zeit.
         </p>
       </div>
-      <img src="assets/images/portrait.jpg" alt="Bild von Sven de Vrieze">
+      <div class="image">
+        <img src="assets/images/portrait.jpg" alt="Bild von Sven de Vrieze">
+      </div>
     </header>
     <section class="images">
       <div class="selector">
