Preview image in large on click

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     </section>
   </main>
 
+  <div id="image-preview" class="image-preview"></div>
+
   <script src="assets/js/main.js"></script>
 </body>
 
